--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 @layer base {
   :root {
     --background: 60 56% 91%;
@@ -44,25 +40,30 @@ body {
   }
 
   .dark {
-    --background: 240 10% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;
+    --background: 26 29% 12%;
+    --foreground: 60 56% 91%;
+    --card: 26 29% 15%;
+    --card-foreground: 60 56% 91%;
+    --popover: 26 29% 15%;
+    --popover-foreground: 60 56% 91%;
     --primary: 45 65% 52%;
-    --primary-foreground: 45 65% 10%;
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 240 3.7% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
-    --accent: 240 3.7% 15.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 346.8 77.2% 49.8%;
+    --primary-foreground: 26 29% 12%;
+    --secondary: 26 29% 50%;
+    --secondary-foreground: 60 56% 91%;
+    --muted: 26 29% 25%;
+    --muted-foreground: 60 30% 70%;
+    --accent: 26 29% 50%;
+    --accent-foreground: 60 56% 91%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 60 56% 91%;
+    --border: 26 29% 25%;
+    --input: 26 29% 25%;
+    --ring: 45 65% 52%;
+    --chart-1: 45 65% 52%;
+    --chart-2: 26 29% 50%;
+    --chart-3: 60 30% 50%;
+    --chart-4: 45 50% 40%;
+    --chart-5: 26 40% 60%;
   }
 }
 
@@ -77,7 +78,7 @@ body {
   .app-body {
      background-image: radial-gradient(circle at top left, hsl(var(--secondary)), hsl(var(--background)) 50%);
   }
-
+  
   .dark .app-body {
     background-image: radial-gradient(circle at top left, hsl(var(--secondary)), hsl(var(--background)) 50%);
   }
